# ray-tracer-challenge

./: .gitignore  CMakeLists.txt
src/: canvas.hpp  color.hpp  main.cpp  pixel.hpp
src/io/: ppm.hpp
src/math/: matrix.hpp  transformation.hpp  tuple.hpp  utility.hpp
tests/: CMakeLists.txt  canvas.cpp  drawings.cpp  matrix.cpp  projectiles.cpp  projectiles_playground.cpp  transformation.cpp  tuple.cpp  tuple_4.cpp
